--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,6 @@
 Metrics/LineLength:
   Max: 120
+Metrics/BlockLength:
+  ExcludedMethods: ['describe', 'context']
 Style/Documentation:
   Enabled: false
