--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,9 @@
 AllCops:
+  NewCops: enable
   TargetRubyVersion: 2.6
 Metrics/LineLength:
   Max: 120
 Metrics/BlockLength:
-  ExcludedMethods: ['describe', 'context']
+  IgnoredMethods: ['describe', 'context']
 Style/Documentation:
   Enabled: false
